# model-project

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: github-actions-demo.yml  pytest-on-pull-requests.yml
modelproject/: wordplay.py
tests/: test_wordplay.py  wordplay_test.py
